corrected menu collapse problem, added contact form css

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -2,18 +2,46 @@
     display: flex;
     flex-direction: column;
     height: 73vh;
+    align-content: left;
 }
 
 .formik {
-    background-color: var(--primary-gradient-color);
+    background-color: var(--primary-text-color);
     border-radius: 10px;;
-    height: 30vh;
+    height: 50vh;
     margin-left: auto;
     margin-right: auto;
     margin-top: 4rem;
-    width: 30%;
+    width: 50vw;
+    text-align: left;
+    color: var(--primary-gradient-color);
+}
+
+.formik button {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
 }
 
 input {
+    background-color: var(--primary-text-color);
+    border: none;
     margin-top: 2rem;
+    min-height: 2rem;
+}
+
+label {
+    margin-left: 2rem;
+}
+
+textarea {
+    background-color: var(--primary-text-color);
+    border: none;
+    min-height: 6rem;
 }
