--- a/src/components/exhibition/exhibition.css
+++ b/src/components/exhibition/exhibition.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
 
-    margin-right: 15vw;
+    margin-right: 0vw;
     text-align: left;
 }
 
@@ -96,6 +96,7 @@ h2{
     justify-content: flex-start;
     margin-left: auto;
     margin-right: auto;
+    height: 82vh;
     width: 80vw;
 }
 }
