--- a/src/components/product-view/productView.css
+++ b/src/components/product-view/productView.css
@@ -70,7 +70,7 @@ span {
 }
 
 .slider {
-    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 }
